# pyVideoSDK-VoiceControl

./: .gitignore  .gitmodules  README-ru.md  README.md  README_RU.md  config.py  main.py  pyproject.toml
